// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout resolve link substitution > Should leave link with text children as it is 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "props": {},
              "type": "TEXT",
            },
          ],
          "props": {
            "src": "url",
          },
          "type": "LINK",
        },
      ],
      "props": {},
      "type": "PAGE",
    },
  ],
  "props": {},
  "type": "DOCUMENT",
}
`;

exports[`layout resolve link substitution > Should replace link with only many text instances as children 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "box": {},
              "children": [
                {
                  "type": "TEXT_INSTANCE",
                  "value": "1",
                },
                {
                  "type": "TEXT_INSTANCE",
                  "value": "2",
                },
                {
                  "type": "TEXT_INSTANCE",
                  "value": "3",
                },
                {
                  "type": "TEXT_INSTANCE",
                  "value": "4",
                },
              ],
              "props": {},
              "style": {},
              "type": "TEXT",
            },
          ],
          "props": {
            "src": "url",
          },
          "type": "LINK",
        },
      ],
      "props": {},
      "type": "PAGE",
    },
  ],
  "props": {},
  "type": "DOCUMENT",
}
`;

exports[`layout resolve link substitution > Should replace link with only one text instance as children 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "box": {},
              "children": [
                {
                  "type": "TEXT_INSTANCE",
                  "value": "1",
                },
              ],
              "props": {},
              "style": {},
              "type": "TEXT",
            },
          ],
          "props": {
            "src": "url",
          },
          "type": "LINK",
        },
      ],
      "props": {},
      "type": "PAGE",
    },
  ],
  "props": {},
  "type": "DOCUMENT",
}
`;

exports[`layout resolve link substitution > Should replace link with render prop 1`] = `
{
  "children": [
    {
      "children": [
        {
          "props": {
            "render": [Function],
          },
          "type": "TEXT",
        },
      ],
      "props": {},
      "type": "PAGE",
    },
  ],
  "props": {},
  "type": "DOCUMENT",
}
`;
